3.0.2 dev
- Added classname to the declaration analysis of properties.
- Added analysis of cUrl resources.
- Added a check for the content type to the ajax detection.
- Bugfix: Replace the $hellip; in the file service, it may cause
  double escaping issues in the backend of some systems.
- Bugfix: The method analysis doesn't take traits into account.
- Bugfix: The property analysis doesn't take traits into account.
- Bugfix: Remove the copy-pasta spaces from the skins.

3.0.1
- Change: All singelton classes now add themself to the pool as
  soon as they are created.
- Bugfix: Added the missing end event to the property analysis.
- Bugfix / Change: Configured debug methods are now checked on
  configuration loading.
- Bugfix: Preserve the line breaks from the string-extra.
- Bugfix: Repair the UndeclaredProperty class and use it.
- Bugfix: Lower the nesting level again after a failed traversable
  analysis.
- Bugfix: Analysis of private getter do not respect the context.
- Bugfix: Interesting display of parameters in the method analysis.
- Bugfix: Infinite loop when configuring the ip range.

3.0.0
- Added 'is' and 'has' to the getter analysis.
- Added plugin support, to replace the half-asses overwrites.
- Added a event dispatcher.
- Added deeper search for the source code getter analysis for
  better results.
- Added a forced logger, which van be reached by \Krexx:log();
- Added a jumpTo element after uncollapsing the breadcrumbs for
  better usability.
- Added support for "\0" chars.
- Added the count info to the traversable analysis.
- Added meta data analysis to the stream resource.
- The file logger writes the logfile right after the analysis is
  complete.
- Change: Some internal renaming.
- Change: Removed the constants analysis configuration.
- Change: Moved the bootstrapping to it's own file.
- Change: Removed the annoying spaces from the generated DOM, for
  better copy-paste.
- Change: Resorted the settings.