@@ -2,6 +2,7 @@
 - Added classname to the declaration analysis of properties.
 - Added analysis of cUrl resources.
 - Added a check for the content type to the ajax detection.
+- Change: Protected properties are now wrapped again.
 - Bugfix: Replace the $hellip; in the file service, it may cause
   double escaping issues in the backend of some systems.
 - Bugfix: The method analysis doesn't take traits into account.
